--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # cache
 .eslintcache
+.cache
 
 # production
 /build
@@ -24,3 +25,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/public
