--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "website",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "express": "^4.17.1",
-    "public-ip": "^4.0.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "dotenv": "^8.2.0",
+    "emotion": "^10.0.27",
+    "gatsby": "^2.32.3",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.5",
+    "gatsby-plugin-google-tagmanager": "^2.11.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "ionicons": "^6.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.3.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "gatsby clean && mkdir public && cp -a static/. public/ && gatsby develop -H 0.0.0.0 -p 8000 -o",
+    "build": "gatsby clean && mkdir public && cp -a static/. public/ && gatsby build --no-uglify",
+    "serve": "gatsby serve",
+    "deploy": "gatsby-plugin-s3 deploy --yes"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -43,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "react-helmet": "^6.1.0"
   }
 }
