--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@react-icons/all-files": "^4.1.0",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "gatsby": "^2.32.3",
@@ -15,10 +16,10 @@
     "gatsby-plugin-google-tagmanager": "^2.11.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sitemap": "^2.12.0",
-    "ionicons": "^6.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "typescript": "^4.1.5"
   },
   "scripts": {
