--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "proxy": "http://localhost:3000",
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
+    "@types/react-helmet": "^6.1.4",
     "react-helmet": "^6.1.0"
   }
 }
